[tool.poetry]
name = "thoughtful-ai-agent"
version = "0.1.0"
description = "A customer support AI agent for Thoughtful AI's healthcare automation agents"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 